Расширены возможности типизации плагинов

--- a/PluginController/PluginController.csproj
+++ b/PluginController/PluginController.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Enums\PluginTypes.cs" />
+    <Compile Include="Enums\Positions.cs" />
     <Compile Include="IPlugin.cs" />
     <Compile Include="IPluginHost.cs" />
     <Compile Include="PluginHost.cs" />
