--- a/QStudio/QStudio.csproj
+++ b/QStudio/QStudio.csproj
@@ -102,6 +102,10 @@
       <Project>{f2d2c25f-1792-434b-8cb9-37061e33a0e4}</Project>
       <Name>BasicComponentsPack</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{0f025b2a-3987-43a0-bdd5-328511bccc1a}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DefaultControlsPack\DefaultControlsPack.csproj">
       <Project>{8976b701-f121-41e8-903f-fc32fddedf26}</Project>
       <Name>DefaultControlsPack</Name>
