Добавлены заглушки для методов базовой оптимизации

--- a/ImplementationPlan/ImplementationPlan.csproj
+++ b/ImplementationPlan/ImplementationPlan.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AvoidDuplicationTypes.cs" />
+    <Compile Include="Optimization.cs" />
     <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReversePolishNotation.cs" />
