--- a/QDeterminant/QDeterminant.csproj
+++ b/QDeterminant/QDeterminant.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{87F06A7A-C02E-4B61-AEDA-9622FE84F362}</ProjectGuid>
+    <ProjectGuid>{EE45CB6E-00EB-4DC9-B26B-6EBA07777C8E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PluginController</RootNamespace>
-    <AssemblyName>PluginController</AssemblyName>
+    <RootNamespace>QDeterminant</RootNamespace>
+    <AssemblyName>QDeterminant</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,15 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Enums\PluginTypes.cs" />
-    <Compile Include="Enums\Positions.cs" />
-    <Compile Include="IPlugin.cs" />
-    <Compile Include="IPluginHost.cs" />
-    <Compile Include="PluginHost.cs" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Determinant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{0f025b2a-3987-43a0-bdd5-328511bccc1a}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
