Плагин вроде бы работает

--- a/ImplementationPlanViewer/ImplementationPlanViewer.csproj
+++ b/ImplementationPlanViewer/ImplementationPlanViewer.csproj
@@ -47,10 +47,17 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="EllipseIP.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Viewer.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="EllipseIP.xaml.cs">
+      <DependentUpon>EllipseIP.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Plugin.cs" />
     <Compile Include="Viewer.xaml.cs">
       <DependentUpon>Viewer.xaml</DependentUpon>
