Мощный рефакторинг и зачатки компилятора

--- a/PluginController/PluginController.csproj
+++ b/PluginController/PluginController.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Compile Include="Enums\PluginTypes.cs" />
     <Compile Include="Enums\Positions.cs" />
+    <Compile Include="FileIntfo.cs" />
     <Compile Include="IPlugin.cs" />
     <Compile Include="IPluginHost.cs" />
     <Compile Include="PluginHost.cs" />
