--- a/QStudio/QStudio.csproj
+++ b/QStudio/QStudio.csproj
@@ -53,6 +53,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DebugSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -60,6 +64,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="DebugSettings.xaml.cs">
+      <DependentUpon>DebugSettings.xaml</DependentUpon>
     </Compile>
     <Compile Include="InternalClasses\CurrentSettings.cs" />
     <Compile Include="MainWindow.xaml.cs">
