--- a/QStudio/QStudio.csproj
+++ b/QStudio/QStudio.csproj
@@ -35,12 +35,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
@@ -110,29 +107,18 @@
       <Project>{f2d2c25f-1792-434b-8cb9-37061e33a0e4}</Project>
       <Name>BasicComponentsPack</Name>
       <Private>True</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{0f025b2a-3987-43a0-bdd5-328511bccc1a}</Project>
-      <Name>Core</Name>
-      <Private>True</Private>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
     <ProjectReference Include="..\DefaultControlsPack\DefaultControlsPack.csproj">
       <Project>{8976b701-f121-41e8-903f-fc32fddedf26}</Project>
       <Name>DefaultControlsPack</Name>
-      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\PluginController\PluginController.csproj">
       <Project>{87f06a7a-c02e-4b61-aeda-9622fe84f362}</Project>
       <Name>PluginController</Name>
       <Private>True</Private>
     </ProjectReference>
-    <ProjectReference Include="..\VisualCore\VisualCore.csproj">
-      <Project>{a018b627-f53b-42f2-823f-4f6b899f1954}</Project>
-      <Name>VisualCore</Name>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
