Работа над компилятором

--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\QStudio\bin\Debug\compiler\</OutputPath>
+    <OutputPath>..\QStudio\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
