--- a/BasicComponentsPack/BasicComponentsPack.csproj
+++ b/BasicComponentsPack/BasicComponentsPack.csproj
@@ -46,7 +46,7 @@
     <Compile Include="CreateProject.xaml.cs">
       <DependentUpon>CreateProject.xaml</DependentUpon>
     </Compile>
-    <Compile Include="InternalClasses\CascadeSolutionTreeItem.cs" />
+    <Compile Include="InternalClasses\ReferenceGridViewItem.cs" />
     <Compile Include="InternalClasses\Dialogs\AbstractDialog.cs" />
     <Compile Include="InternalClasses\Dialogs\DialogsFactory.cs" />
     <Compile Include="InternalClasses\Dialogs\DialogTypes.cs" />
