--- a/CodeGeneration/CodeGeneration.csproj
+++ b/CodeGeneration/CodeGeneration.csproj
@@ -45,6 +45,11 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\VariableTypes.cs" />
+    <Compile Include="InternalClasses\VariableTypesGridViewItem.cs" />
+    <Compile Include="SettingsProjectTabItem.xaml.cs">
+      <DependentUpon>SettingsProjectTabItem.xaml</DependentUpon>
+    </Compile>
     <Page Include="CodeGenerationSettings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -60,6 +65,10 @@
       <DependentUpon>GenerationButton.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingsProjectTabItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Generator.cs" />
