--- a/QDeterminant/QDeterminant.csproj
+++ b/QDeterminant/QDeterminant.csproj
@@ -35,6 +35,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Determinant.cs" />
+    <Compile Include="InternalClasses\ActionList.cs" />
+    <Compile Include="InternalClasses\LinearPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
