--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -49,8 +49,13 @@
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{0f025b2a-3987-43a0-bdd5-328511bccc1a}</Project>
       <Name>Core</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="config.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
